# Projeto_SPORTSLINK-BD

./: DDL.sql  DER_SL.drawio  DML.sql  ER-BD-Projeto.xlsx  ER_SL.drawio  Indices.sql  Projeto_SportsLink-BD-118741-118803.docx  README.md  TestesQuerys.sql  conf.ini  delete.sql  testes_indices.sql
DOC/: DER_SL.drawio  ER_SL.drawio  Projeto_SPORTSLINK-BD.docx
python/: app.py  config.py  tempCodeRunnerFile.py
python/controllers/: __init__.py  auth.py  campo.py  user.py
python/models/: campo.py  (+5 more)
src/: app.py  conf.ini  config.py  db.py  pyproject.toml
src/controllers/: __init__.py  auth.py  campo.py  partidas.py  user.py
src/persistency/: funcs.sql  procedures.sql  triggers.sql  views.sql
src/persistency/functions/: funcs.sql  funcs_campos.sql
src/persistency/procedures/: IMG.sql  admin.sql  arrendador.sql  auth.sql  campos.sql  jogador.sql  partida.sql  ponto.sql  procedures.sql  reservas.sql  utilizador.sql
src/persistency/triggers/: auth.sql  calculus.sql  triggers.sql
src/persistency/views/: views.sql
src/routes/: __init__.py  admin.py  dashboard.py
src/static/css/: styles.css
src/static/js/: scripts.js
src/templates/: admin.html  amigo_details.html  arr_campos_list.html  arr_dashboard.html  base_index.html  base_user.html  campo_details.html  campo_details2.html  historico_partidas.html  index.html  jog_dashboard.html  list_campos.html  list_partidas.html  lista_amigos.html  partida_details.html
src/templates/partials/: users_table.html
src/utils/: __init__.py  db.py  general.py
testes_sql/: SQLQuery1.sql  TestesQuerys.sql  script_Sql.py
(+23 files in other folders)
