[tool.poetry]
name = "src"
version = "1.2.0"
description = "Base de Dados - Projeto Final"
authors = ["Paulo Cunha <paulo.c50@ua.pt>", "Rafael Ferreira <rafaelferreira31@ua.pt>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9"
Flask = "^3.0.2"
pyodbc = "^5.1.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.2"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]